--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "questionnaireCabinetLenvolee",
-  "displayName": "questionnaireCabinetLenvolee"
+  "name": "lenvolee questionnaire v2",
+  "displayName": "lenvolee questionnaire v2"
 }
