--- a/ios/lenvoleequestionnairev2.xcodeproj/xcshareddata/xcschemes/lenvoleequestionnairev2.xcscheme
+++ b/ios/lenvoleequestionnairev2.xcodeproj/xcshareddata/xcschemes/lenvoleequestionnairev2.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "questionnaireCabinetLenvolee.app"
-               BlueprintName = "questionnaireCabinetLenvolee"
-               ReferencedContainer = "container:questionnaireCabinetLenvolee.xcodeproj">
+               BuildableName = "lenvoleequestionnairev2.app"
+               BlueprintName = "lenvoleequestionnairev2"
+               ReferencedContainer = "container:lenvoleequestionnairev2.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "questionnaireCabinetLenvoleeTests.xctest"
-               BlueprintName = "questionnaireCabinetLenvoleeTests"
-               ReferencedContainer = "container:questionnaireCabinetLenvolee.xcodeproj">
+               BuildableName = "lenvoleequestionnairev2Tests.xctest"
+               BlueprintName = "lenvoleequestionnairev2Tests"
+               ReferencedContainer = "container:lenvoleequestionnairev2.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "questionnaireCabinetLenvolee.app"
-            BlueprintName = "questionnaireCabinetLenvolee"
-            ReferencedContainer = "container:questionnaireCabinetLenvolee.xcodeproj">
+            BuildableName = "lenvoleequestionnairev2.app"
+            BlueprintName = "lenvoleequestionnairev2"
+            ReferencedContainer = "container:lenvoleequestionnairev2.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "questionnaireCabinetLenvolee.app"
-            BlueprintName = "questionnaireCabinetLenvolee"
-            ReferencedContainer = "container:questionnaireCabinetLenvolee.xcodeproj">
+            BuildableName = "lenvoleequestionnairev2.app"
+            BlueprintName = "lenvoleequestionnairev2"
+            ReferencedContainer = "container:lenvoleequestionnairev2.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
